--- a/vms/fedora-gitops1.yaml
+++ b/vms/fedora-gitops1.yaml
@@ -18,6 +18,7 @@ items:
       app: fedora-gitops1
       vm.kubevirt.io/template: fedora-server-small
       vm.kubevirt.io/template.revision: "1"
+      app.kubernetes.io/part-of: vms-gitops
       vm.kubevirt.io/template.version: v0.25.0
     name: fedora-gitops1
   spec:
