--- a/vms/centos-gitops1.yaml
+++ b/vms/centos-gitops1.yaml
@@ -35,7 +35,7 @@ items:
           resources:
             requests:
               storage: 30Gi
-    running: false
+    running: true
     template:
       metadata:
         annotations:
