--- a/vms/centos-gitops1.yaml
+++ b/vms/centos-gitops1.yaml
@@ -16,6 +16,7 @@ items:
         ]
     labels:
       app: centos-stream9-rpb4hgojbhjepns4
+      app.kubernetes.io/part-of: vms-gitops
       vm.kubevirt.io/template: centos-stream9-server-small
       vm.kubevirt.io/template.revision: "1"
       vm.kubevirt.io/template.version: v0.25.0
