--- a/vms/centos-gitops1.yaml
+++ b/vms/centos-gitops1.yaml
@@ -15,12 +15,12 @@ items:
           }
         ]
     labels:
-      app: centos-stream9-rpb4hgojbhjepns4
+      app: centos-gitops
       app.kubernetes.io/part-of: vms-gitops
       vm.kubevirt.io/template: centos-stream9-server-small
       vm.kubevirt.io/template.revision: "1"
       vm.kubevirt.io/template.version: v0.25.0
-    name: centos-stream9-rpb4hgojbhjepns4
+    name: centos-gitops
   spec:
     dataVolumeTemplates:
     - apiVersion: cdi.kubevirt.io/v1beta1
