--- a/vms/fedora-gitops1.yaml
+++ b/vms/fedora-gitops1.yaml
@@ -36,7 +36,7 @@ items:
           resources:
             requests:
               storage: 30Gi
-    running: true
+    running: false
     template:
       metadata:
         annotations:
